--- a/app/src/main/res/layout/activity_update_task.xml
+++ b/app/src/main/res/layout/activity_update_task.xml
@@ -6,4 +6,62 @@
     android:layout_height="match_parent"
     tools:context=".UpdateTaskActivity">
 
+    <TextView
+        android:id="@+id/taskName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="133dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/doneOrNot"/>
+
+    <RadioGroup
+        android:id="@+id/doneOrNot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="33dp"
+        android:layout_marginBottom="33dp"
+        app:layout_constraintTop_toBottomOf="@+id/taskName"
+        app:layout_constraintBottom_toTopOf="@+id/updateTask"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <RadioButton
+            android:id="@+id/done"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Done"
+            android:textAlignment="viewStart"
+            android:onClick="onStatusUpdateClicked"/>
+
+        <RadioButton
+            android:id="@+id/notDone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Not one"
+            android:textAlignment="viewStart"
+            android:onClick="onStatusUpdateClicked"/>
+    </RadioGroup>
+
+    <Button
+        android:id="@+id/updateTask"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="33dp"
+        android:layout_marginEnd="8dp"
+        android:text="Update"
+        android:textAlignment="center"
+        android:onClick="onUpdateTaskClick"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/doneOrNot" />
+
 </android.support.constraint.ConstraintLayout>
